--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,45 +17,106 @@ body{
   background-image: url(../img/photo-1512895356176-c49e710676ac.jpg);
   background-size: cover;
   background-position: center;
-  align-items: center;
 }
 
 #first-page > header{
   width: 100%;
   height: 100px;
+  margin: 20px auto 0;
 }
 
 #first-page > header > nav{
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  
+  display: block;
 }
 
 #first-page > header > nav > p{
-  display: flex;
+  display: inline-block;
+  float: left;
+  color: #fff;
+  margin-left: 50px;
+  font-size: 20px;
 }
 
 #first-page > header > nav > ul{
-  display: block;
-  display: flex;
-  flex-direction: row;
+  display: inline-block;
+  float: right;
+  margin-right: 50px;
 }
 
 #first-page > header > nav > ul > li{
-  display: block;
+  display: inline-block;
 
 }
 
 #first-page > header > nav > ul > li > a{
   text-decoration: none;
+  color: #fff;
+  font-size: 20px;
+  padding: 5px 15px;
 }
 
-#first-page > content{
+#first-page > header > nav > ul > li > a:hover{
+  color: #3399ff;
+}
+
+#first-page > .content{
   display: flex;
   flex-direction: column;
-  align-items: center;
+  margin-top: 300px;
 }
-#first-page > content > h1{
-  justify-content: center;
+#first-page > .content > h1{
+  margin: 30px auto 0;
+  color: #fff;
+  font-size: 50px;
+}
+
+#first-page > .content > p{
+  width: 100%;
+  max-width: 700px;
+  margin: 30px auto 0;
+  text-align: center;
+  color: #fff;
+}
+
+#first-page > .content > .button{
+  margin: 30px auto 0;
+}
+
+#first-page > .content > .button > a{
+  padding: 5px 10px;
+  text-decoration: none;
+  margin: 0 20px;
+}
+
+#first-page > .content > .button > .lm{
+  color: #fff;
+  border: #fff 1px solid;
+}
+
+#first-page > .content > .button > .gs{
+  color: #000;
+  background-color: #fff;
+  border: #fff 1px solid;
+}
+
+@media screen and (max-width: 320px){
+  #first-page > header > nav{
+    width: 100%;
+    max-width: 320px;
+  }
+  #first-page > header > nav > p{
+    margin: 0 100px;
+  }
+
+  #first-page > header > nav > ul{
+    display: flex;
+    flex-direction: column;
+    margin-right: 110px;
+    text-align: center;
+    padding-top: 20px; 
+  }
+
+  #first-page > .content > h1{
+    font-size: 30px;
+  }
 }
