--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,8 @@ body{
   font-family: sans-serif;
 }
 
+/* first page */
+
 #first-page{
   width: 100%;
   height: 100vh;
@@ -99,24 +101,41 @@ body{
   border: #fff 1px solid;
 }
 
+/* media */
+
 @media screen and (max-width: 320px){
   #first-page > header > nav{
     width: 100%;
-    max-width: 320px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
   #first-page > header > nav > p{
-    margin: 0 100px;
+    margin: 0;
   }
 
   #first-page > header > nav > ul{
     display: flex;
     flex-direction: column;
-    margin-right: 110px;
+    margin: 0;
+    padding-top: 20px;
     text-align: center;
-    padding-top: 20px; 
   }
 
   #first-page > .content > h1{
     font-size: 30px;
+  }
+
+  #first-page > .content > p{
+    font-size: 12px;
+  }
+
+  #first-page > .content > .button{
+    display: flex;
+    flex-direction: column;
+  }
+
+  #first-page > .content > .button > a{
+    margin: 5px;
   }
 }
