--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -122,6 +122,7 @@ body{
   max-width: 100%;
   display: flex;
   flex-direction: row;
+  align-items: center;
   justify-content: center;
   margin: 400px auto;
 }
