--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -178,6 +178,55 @@ body{
 
 /* second page end */
 
+/* third page */
+
+#third-page{
+  width: 100%;
+  height: 100vh;
+  background-color: #e6e6e6;
+}
+
+#third-page > .container{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+#third-page > .container > .title{
+  width: 100%;
+  margin-top: 100px;
+  text-align: center;
+}
+
+#third-page > .container > .content{
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(4,1fr)
+}
+
+#third-page > .container > .content > .box{
+  width: 300px;
+  height: 200px;
+  margin: 100px auto 0;
+  background-image: url(../img/210165.jpg);
+  background-position: center;
+  background-size: cover;
+}
+
+#third-page > .container > .content > .box > .details{
+
+}
+
+#third-page > .container > .content > .box > .details > h3{
+
+}
+
+#third-page > .container > .content > .box > .details > p{
+
+}
+
+/* third page end */
+
 /* media 768px */
 
 @media screen and (max-width: 768px){
