--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -207,25 +207,116 @@ body{
 #third-page > .container > .content > .box{
   width: 300px;
   height: 200px;
-  margin: 100px auto 0;
-  background-image: url(../img/210165.jpg);
+  margin: 200px auto 0;
   background-position: center;
   background-size: cover;
 }
 
-#third-page > .container > .content > .box > .details{
+#third-page > .container > .content > .box-1{
+  background-image: url(../img/210165.jpg);
+}
 
+#third-page > .container > .content > .box-2{
+  background-image: url(../img/wallpaper-2937024.jpg);
+}
+
+#third-page > .container > .content > .box-3{
+  background-image: url(../img/raja-ampat.jpg);
+}
+
+#third-page > .container > .content > .box-4{
+  background-image: url(../img/Indonesia-Blog-Feature-resized.jpg);
+}
+
+#third-page > .container > .content > .box > .details{
+  visibility: hidden;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
 }
 
 #third-page > .container > .content > .box > .details > h3{
-
+  padding: 20px 20px 0;
+  color: #fff;
 }
 
 #third-page > .container > .content > .box > .details > p{
+  padding: 20px 20px 0;
+  color: #fff;
+}
 
+#third-page > .container > .content > .box:hover > .details{
+  visibility: visible;
 }
 
 /* third page end */
+
+/* fourth page */
+
+#fourth-page{
+  width: 100%;
+  height: 100vh;
+  background-color: #fff;
+}
+
+#fourth-page > .container{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#fourth-page > .container > .content{
+  display: flex;
+  flex-direction: row;
+  margin-top: 150px;
+}
+
+#fourth-page > .container > .content > .details{
+  width: 100%;
+  max-width: 500px;
+  margin: 0 50px;
+}
+
+#fourth-page > .container > .content > .details > h2{
+  font-size: 50px;
+}
+
+#fourth-page > .container > .content > .details > p{
+  margin-top: 50px;
+}
+
+#fourth-page > .container > .content > img{
+  width: 100%;
+  max-width: 500px;
+  margin: 0 50px;
+}
+
+#fourth-page > .container > footer{
+  text-align: center;
+  margin-top: 200px;
+}
+
+#fourth-page > .container > footer > p{
+  margin: 10px;
+}
+
+/* fourth page end */
+
+/* media 1024px */
+
+@media screen and (max-width: 1024px){
+  #third-page > .container > .content{
+    display: grid;
+    grid-template-columns: repeat(3,1fr)
+  }
+
+  #third-page > .container > .content > .box{
+    margin: 100px auto 0;
+  }
+}
+
+/* media 1024px end */
 
 /* media 768px */
 
@@ -250,6 +341,41 @@ body{
   }
 
   /* media second page end */
+
+  /* media third page */
+
+  #third-page > .container > .content{
+    display: grid;
+    grid-template-columns: repeat(2,1fr)
+  }
+
+  #third-page > .container > .content > .box{
+    margin: 50px auto 0;
+  }
+
+  /* media third page end */
+
+  /* media fourth page */
+
+  #fourth-page > .container > .content{
+    display: flex;
+    flex-direction: column;
+    margin-top: 50px;
+  }
+
+  #fourth-page > .container > .content > .details > p{
+    margin-top: 20px;
+  }
+
+  #fourth-page > .container > .content > img{
+    margin-top: 20px;
+  }
+
+  #fourth-page > .container > footer{
+    margin-top: 100px;
+  }
+
+  /* media fourth page end */
 }
 
 /* media 320px */
@@ -325,6 +451,56 @@ body{
   }
 
   /* media second page end */
+
+  /* media third page */
+
+  #third-page{
+    height: 120vh;
+  }
+
+  #third-page > .container > .content{
+    display: flex;
+    flex-direction: column;
+  }
+
+  #third-page > .container > .content > .box{
+    width: 250px;
+    height: 150px;
+  }
+
+  #third-page > .container > .content > .box > .details > h3{
+    font-size: 20px;
+  }
+
+  #third-page > .container > .content > .box > .details > p{
+    font-size: 11px;
+  }
+
+  /* media third page end */
+
+  /* media fourth page */
+
+  #fourth-page > .container > .content > .details{
+    max-width: 250px;
+  }
+
+  #fourth-page > .container > .content > .details > h2{
+    font-size: 20px;
+  }
+
+  #fourth-page > .container > .content > .details > p{
+    font-size: 12px;
+  }
+
+  #fourth-page > .container > .content > img{
+    max-width: 250px;
+  }
+
+  #fourth-page > .container > footer > p{
+    font-size: 12px;
+  }
+
+  /* media fourth page end */
 }
 
 /* media 320px end */
